--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".rxSample.SimpleUseActivity" />
-        <activity android:name=".schedule.ScheduleActivity"></activity>
+        <activity android:name=".schedule.ScheduleActivity" />
+        <activity android:name=".serach.SearchActivity" />
+        <activity android:name=".verificationcode.VerificationCodeActivity"></activity>
     </application>
 
 </manifest>
